--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,7 @@ body {
    z-index: 10;
    position: absolute;
    top: 150px;
-   /* left: calc(50% - 200px); */
-   /* height: 150px;
-  width: 400px; */
-   max-width: 400px;
+   max-width: 450px;
    padding: 10px;
    background: steelblue;
    border-radius: 8px;
@@ -232,6 +229,7 @@ div[data-state="open"] {
    background-size: cover;
    width: 300px;
    height: 450px;
+   z-index: 10;
    opacity: 0; /* Das Bild ist standardmäßig unsichtbar */
    transition: opacity 0.3s; /* Übergangseffekt für die Sichtbarkeit */
 }
