--- a/css/room3.css
+++ b/css/room3.css
@@ -21,7 +21,7 @@
 }
 
 #lightRoom3 {
-  background-color: #00000000;
+  /* background-color: #00000000; */
   background-image: url(../images/general/deckenlampe.png);
   background-position: center center;
   background-repeat: no-repeat;
