--- a/css/room2.css
+++ b/css/room2.css
@@ -1,16 +1,27 @@
 #morse-code-device {
-   position: absolute;
-   background-image: url("../images/room2/morse-code-device.png");
-   background-repeat: no-repeat;
-   background-size: cover;
-   top: 400px;
-   left: 200px;
-   width: 36px;
-   height: 57px;
+  position: absolute;
+  background-image: url("../images/room2/morse-code-device.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 400px;
+  left: 200px;
+  width: 36px;
+  height: 57px;
 }
 
 #lightRoom2 {
-   bottom: -8px;
-   left: -8px;
-   background-color: transparent;
+  bottom: -8px;
+  left: -8px;
+  background-color: transparent;
+}
+
+#lightSwitchLabel {
+  position: absolute;
+  background-image: url("../images/room2/light-switch.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 390px;
+  left: 10px;
+  width: 13px;
+  height: 50px;
 }
