--- a/css/room2.css
+++ b/css/room2.css
@@ -12,7 +12,7 @@
 #lightRoom2 {
   bottom: -8px;
   left: -8px;
-  background-color: transparent;
+  /* background-color: transparent; */
 }
 
 #lightSwitchLabel {
@@ -24,4 +24,14 @@
   left: 10px;
   width: 13px;
   height: 50px;
+}
+
+#rommNr2 {
+  position: absolute;
+  font-weight: bold;
+  transform: rotateZ(-90deg);
+  z-index: 3;
+  top: 333px;
+  left: 161px;
+  color: #faebd7;
 }
