--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,11 @@ div[data-state="open"] {
   font-family: cursive;
 }
 
+#time{
+  margin-bottom: 10px;
+  color: #4682b4;
+}
+
 #control {
   margin-left: 30px;
 }
