--- a/css/room3.css
+++ b/css/room3.css
@@ -55,6 +55,7 @@
     left: 96px;
     opacity: 0;
     transition: all 1s;
+    animation: wobble 0.3s infinite alternate;
   }
   #rfid-chip:hover {
     background-color: #fafad2;
@@ -62,11 +63,6 @@
 }
 
 #lightRoom3 {
-  /* background-color: #00000000; */
-  background-image: url(../images/general/deckenlampe.png);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: 25px 25px;
   top: 0px;
   left: 348px;
   width: 236px;
@@ -110,4 +106,17 @@
   top: 232px;
   left: 339px;
   color: #faebd7;
+}
+
+#wardrobe-puzzle-help {
+  position: absolute;
+  background-image: url("../images/room3/candle.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: none;
+  top: 400px;
+  right: 90px;
+  width: 17px;
+  height: 20px;
+  animation: wobble 0.3s infinite alternate;
 }
