--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+/* ################################################################
+ Filename      : main.css
+ Author        : Bohn Matthias
+ Date          : 26.05.2024
+################################################################ */
 * {
   margin: 0;
   padding: 0;
