--- a/css/room3.css
+++ b/css/room3.css
@@ -125,3 +125,14 @@
   height: 25px;
   animation: wobble 0.3s infinite alternate;
 }
+
+#candle {
+  position: absolute;
+  background-image: url("../images/room3/candle.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 446px;
+  right: 91px;
+  width: 19px;
+  height: 21px;
+}
