--- a/css/room2.css
+++ b/css/room2.css
@@ -63,7 +63,7 @@
     left: 43px;
   }
 
-  #morseCode-puzzle-help {
+  #puzzle-helper-room2 {
     position: relative;
     background-image: url("../images/room2/prints.png");
     background-repeat: no-repeat;
