--- a/css/room3.css
+++ b/css/room3.css
@@ -114,7 +114,7 @@
   color: #faebd7;
 }
 
-#wardrobe-puzzle-help {
+#puzzle-helper-room3 {
   position: absolute;
   background-image: url("../images/room3/info.png");
   background-repeat: no-repeat;
