--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,7 @@ div[data-state="open"] {
   font-family: cursive;
 }
 
-#time{
+#time {
   margin-bottom: 10px;
   color: #4682b4;
 }
@@ -212,10 +212,29 @@ div[data-state="open"] {
     display: flex;
     align-items: center;
 
-    img{
+    img {
       margin-right: 10px;
     }
   }
+}
+
+.blue-btn {
+  background-color: #4682b4;
+  color: white;
+  padding: 5px;
+  margin-bottom: 5px;
+  font-weight: 600;
+  border-radius: 4px;
+  border-color: #568f44;
+  transition: all 0.5s ease;
+}
+.blue-btn:hover{
+  background-color: #0d5590;
+  cursor: pointer;
+}
+
+#video-btn{
+  display: none;
 }
 
 #items {
